[tool.poetry]
name = "beediscovery-panel"
version = "0.1.0"
description = "testing"
authors = ["William Ellwood <william@grepler.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "beediscovery_panel"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyterlab = "^3.6.1"
awesome-panel-cli = {extras = ["all"], version = "^0.1.0rc11"}
sqlite-utils = "^3.30"
pydantic-panel = "^0.1.13"
sqlmodel = "^0.0.8"
jedi = "^0.18.2"
pygwalker = "^0.1.2"
spatialite = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
